<resources>
    <string name="app_name">Ecommerce</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="settings">settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="login_register"><![CDATA[Login&Register]]></string>
    <string name="please_login">please login or create an account for free</string>
    <string name="turn_on_off_notifications">Turn on/off Notifications</string>
    <string name="turn_on_off_local_notifications">Turn on/off Local Notifications</string>
    <string name="official_website">Official Website</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="refund_policy">Refund Policy</string>
    <string name="term_service">Term and Services</string>
    <string name="rate_us">Rate Us</string>
    <string name="share">Share</string>
    <string name="about_us">Welcome ..   We aim to offer our customers a variety of the latest Clothes.
        We\'ve come a long way, so we know exactly which direction to take when supplying you with high quality yet budget friendly products.
        We offer all of this while providing excellent customer service and friendly support.
        We always keep an eye on the latest trends in Clothes and put our customers\' wishes first.
        That is why we have satisfied customers all over the world, and are thrilled to be a part of the Clothes industry.
        The interests of our customers are always the top priority for us, so we hope you will enjoy our products as much as we enjoy making them available to you.</string>



    <!-- String for Start Activity ( Login and Register )  -->

    <string name="enter_email">Enter Your Email</string>
    <string name="enter_pass">Enter Your Password</string>
    <string name="loginBtn">Sign In</string>
    <string name="registerFromLogin">Don\'t have an account ? Register Now</string>
    <string name="invalidData">Invalid Login Data</string>
</resources>
