<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootViewForLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="1"
    android:background="@drawable/pic8"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="mohamed.ecommerce.views.LoginFragment">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text=""
        android:textColor="#fff"
        android:textSize="25sp"
        android:padding="@dimen/large_margin"
        android:textStyle="normal" />

    <RelativeLayout
        android:id="@+id/rltvlogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/user_profile_photo"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="54dp"
        android:alpha="0.8"
        android:background="#fff"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp"
        android:paddingBottom="10dp"
        android:paddingEnd="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingStart="20dp"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/fav_height">

            <TextView
                android:id="@+id/invalindicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/invalidData"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#8b0000"
                android:visibility="invisible"

                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutForEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"

                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawableStart="@drawable/ic_email"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"

                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutForPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etpass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawableStart="@drawable/ic_lock"
                    android:hint="@string/enter_pass"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/loginbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:text="@string/loginBtn"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#fff"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/registerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/registerFromLogin"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        </LinearLayout>
    </RelativeLayout>

    <ImageButton
        android:id="@+id/user_profile_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/login_title"
        android:layout_centerHorizontal="true"
        android:alpha="1"
        android:background="@drawable/user_profile_image_background"
        android:contentDescription=""
        android:elevation="4dp"
        android:src="@drawable/shoppingbag"
        tools:ignore="ContentDescription" />

</RelativeLayout>
