<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundItem"
    android:fitsSystemWindows="true"
    android:descendantFocusability="blocksDescendants"
    tools:context="mohamed.ecommerce.views.SettingsFragment">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/backgound_login" />

                <ImageView
                    android:id="@+id/profile_pic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/loginBackground"
                    android:scaleType="centerCrop" />


                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="21dp"
                    android:background="@drawable/profile_background"
                    app:srcCompat="@drawable/ic_person_outline_black_24dp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="37dp"
                    android:text="@string/login_register"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="-37dp"
                    android:text="@string/please_login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />

            </RelativeLayout>


            <LinearLayout
                android:id="@+id/linearLayout2"

                style="@style/settingsLinearLayoutStyle"
                android:layout_height="46dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="248dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    style="@style/settingsTextViewStyle"
                    android:text="@string/turn_on_off_local_notifications" />

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                style="@style/settingsLinearLayoutStyle"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="208dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/relativeLayout">

                <TextView
                    style="@style/settingsTextViewStyle"
                    android:text="@string/turn_on_off_notifications" />

                <Switch
                    android:id="@+id/switch2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/container_rc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="312dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/relativeLayout">

            </android.support.v7.widget.RecyclerView>


        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
